--- a/src/App.scss
+++ b/src/App.scss
@@ -87,9 +87,20 @@ html,
   }
 }
 
-  .restaurants-page{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    }
+.restaurants-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.homepage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  h2 {
+    align-items: center;
+    align-self: center;
+    margin: 30px;
+  }
+}
